Alteração para mostrar todas as colunas do dataframe

--- a/series_historicas/notebooks/ler_base_historica.ipynb
+++ b/series_historicas/notebooks/ler_base_historica.ipynb
@@ -18,14 +18,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from datetime import datetime\n",
     "import os\n",
-    "import zipfile"
+    "import zipfile\n",
+    "\n",
+    "pd.set_option('display.max_columns', None)"
    ]
   },
   {
@@ -38,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,18 +166,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Inicio da leitura: 2024-04-25 09:35:50.542493\n",
+      "Inicio da leitura: 2024-08-10 11:39:36.181558\n",
       "\n",
-      "#### Arquivo importado com sucesso! - 1,251,646 registros em 0:00:28.807120 ####\n",
+      "#### Arquivo importado com sucesso! - 1,251,646 registros em 0:00:22.894337 ####\n",
       "\n",
-      "Fim da leitura: 2024-04-25 09:36:19.350421\n"
+      "Fim da leitura: 2024-08-10 11:39:59.076919\n"
      ]
     }
    ],
@@ -188,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +224,12 @@
        "      <th>prazo_dias_merc_termo</th>\n",
        "      <th>moeda_referencia</th>\n",
        "      <th>preco_abertura</th>\n",
-       "      <th>...</th>\n",
+       "      <th>preco_maximo</th>\n",
+       "      <th>preco_minimo</th>\n",
+       "      <th>preco_medio</th>\n",
+       "      <th>preco_ultimo_negocio</th>\n",
+       "      <th>preco_melhor_oferta_compra</th>\n",
+       "      <th>preco_melhor_oferta_venda</th>\n",
        "      <th>numero_negocios</th>\n",
        "      <th>quantidade_papeis_negociados</th>\n",
        "      <th>volume_total_negociado</th>\n",
@@ -237,184 +244,213 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>562463</th>\n",
+       "      <th>387349</th>\n",
        "      <td>1</td>\n",
-       "      <td>2020-05-12</td>\n",
-       "      <td>82</td>\n",
-       "      <td>BBDCR500</td>\n",
-       "      <td>80</td>\n",
-       "      <td>BBDCE    /EJ</td>\n",
-       "      <td>PN      N1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>R$</td>\n",
-       "      <td>1.64</td>\n",
-       "      <td>...</td>\n",
-       "      <td>10</td>\n",
-       "      <td>6630</td>\n",
-       "      <td>11746.40</td>\n",
-       "      <td>18.66</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2020-06-15</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>BRBBDCACNPR8</td>\n",
-       "      <td>708</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43293</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2020-02-28</td>\n",
-       "      <td>8</td>\n",
-       "      <td>RNEW11</td>\n",
-       "      <td>10</td>\n",
-       "      <td>RENOVA</td>\n",
-       "      <td>UNT     N2</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>R$</td>\n",
-       "      <td>11.63</td>\n",
-       "      <td>...</td>\n",
-       "      <td>22</td>\n",
-       "      <td>3100</td>\n",
-       "      <td>36957.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>BRRNEWCDAM15</td>\n",
-       "      <td>106</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1147281</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2020-11-30</td>\n",
-       "      <td>82</td>\n",
-       "      <td>ITUBX266</td>\n",
-       "      <td>80</td>\n",
-       "      <td>ITUBE</td>\n",
-       "      <td>PN      N1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>R$</td>\n",
-       "      <td>0.33</td>\n",
-       "      <td>...</td>\n",
-       "      <td>22</td>\n",
-       "      <td>24700</td>\n",
-       "      <td>8156.00</td>\n",
-       "      <td>26.54</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2020-12-21</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>BRITUBACNPR1</td>\n",
-       "      <td>268</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>59804</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2020-03-20</td>\n",
-       "      <td>96</td>\n",
-       "      <td>IRBR3F</td>\n",
-       "      <td>20</td>\n",
-       "      <td>IRBBRASIL RE</td>\n",
+       "      <td>2020-02-17</td>\n",
+       "      <td>78</td>\n",
+       "      <td>BRMLC18</td>\n",
+       "      <td>70</td>\n",
+       "      <td>BRML  FM</td>\n",
        "      <td>ON      NM</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>R$</td>\n",
-       "      <td>8.05</td>\n",
-       "      <td>...</td>\n",
-       "      <td>6081</td>\n",
-       "      <td>185976</td>\n",
-       "      <td>1526108.41</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>0.54</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>0.54</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>1.08</td>\n",
+       "      <td>34</td>\n",
+       "      <td>184600</td>\n",
+       "      <td>102132.00</td>\n",
+       "      <td>18.00</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaT</td>\n",
+       "      <td>2020-03-16</td>\n",
        "      <td>1</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>BRIRBRACNOR4</td>\n",
-       "      <td>106</td>\n",
+       "      <td>BRBRMLACNOR9</td>\n",
+       "      <td>115</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>645594</th>\n",
+       "      <th>783638</th>\n",
        "      <td>1</td>\n",
-       "      <td>2020-06-10</td>\n",
-       "      <td>82</td>\n",
-       "      <td>ELETS310</td>\n",
-       "      <td>80</td>\n",
-       "      <td>ELETE  FM</td>\n",
-       "      <td>PNB     N1</td>\n",
+       "      <td>2020-07-29</td>\n",
+       "      <td>78</td>\n",
+       "      <td>CCROH180</td>\n",
+       "      <td>70</td>\n",
+       "      <td>CCRO</td>\n",
+       "      <td>ON      NM</td>\n",
        "      <td>0.0</td>\n",
        "      <td>R$</td>\n",
-       "      <td>2.03</td>\n",
-       "      <td>...</td>\n",
-       "      <td>13</td>\n",
-       "      <td>76900</td>\n",
-       "      <td>166722.00</td>\n",
-       "      <td>31.00</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>50.00</td>\n",
+       "      <td>18.00</td>\n",
        "      <td>0</td>\n",
-       "      <td>2020-07-20</td>\n",
+       "      <td>2020-08-17</td>\n",
        "      <td>1</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>BRELETACNPB7</td>\n",
-       "      <td>71</td>\n",
+       "      <td>BRCCROACNOR2</td>\n",
+       "      <td>137</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>994873</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2020-10-13</td>\n",
+       "      <td>82</td>\n",
+       "      <td>JBSSW172</td>\n",
+       "      <td>80</td>\n",
+       "      <td>JBSSE</td>\n",
+       "      <td>ON      NM</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>R$</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.22</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>0.29</td>\n",
+       "      <td>15</td>\n",
+       "      <td>20600</td>\n",
+       "      <td>4209.00</td>\n",
+       "      <td>17.21</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2020-11-16</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>BRJBSSACNOR8</td>\n",
+       "      <td>115</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1024902</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2020-10-21</td>\n",
+       "      <td>78</td>\n",
+       "      <td>USIMK133</td>\n",
+       "      <td>70</td>\n",
+       "      <td>USIM</td>\n",
+       "      <td>PNA     N1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>R$</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>152</td>\n",
+       "      <td>366300</td>\n",
+       "      <td>50133.00</td>\n",
+       "      <td>13.31</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2020-11-16</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>BRUSIMACNPA6</td>\n",
+       "      <td>162</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1170653</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2020-12-07</td>\n",
+       "      <td>82</td>\n",
+       "      <td>CIELM350</td>\n",
+       "      <td>80</td>\n",
+       "      <td>CIELE  FM</td>\n",
+       "      <td>ON      NM</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>R$</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>394.00</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2021-01-18</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>BRCIELACNOR3</td>\n",
+       "      <td>142</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 26 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "         tipo_registro data_pregao  cod_bdi cod_negociacao  tipo_mercado  \\\n",
-       "562463               1  2020-05-12       82       BBDCR500            80   \n",
-       "43293                1  2020-02-28        8         RNEW11            10   \n",
-       "1147281              1  2020-11-30       82       ITUBX266            80   \n",
-       "59804                1  2020-03-20       96         IRBR3F            20   \n",
-       "645594               1  2020-06-10       82       ELETS310            80   \n",
+       "387349               1  2020-02-17       78        BRMLC18            70   \n",
+       "783638               1  2020-07-29       78       CCROH180            70   \n",
+       "994873               1  2020-10-13       82       JBSSW172            80   \n",
+       "1024902              1  2020-10-21       78       USIMK133            70   \n",
+       "1170653              1  2020-12-07       82       CIELM350            80   \n",
        "\n",
-       "         nome_empresa especificacao_papel  prazo_dias_merc_termo  \\\n",
-       "562463   BBDCE    /EJ          PN      N1                    0.0   \n",
-       "43293          RENOVA          UNT     N2                    NaN   \n",
-       "1147281         ITUBE          PN      N1                    0.0   \n",
-       "59804    IRBBRASIL RE          ON      NM                    NaN   \n",
-       "645594      ELETE  FM          PNB     N1                    0.0   \n",
+       "        nome_empresa especificacao_papel  prazo_dias_merc_termo  \\\n",
+       "387349      BRML  FM          ON      NM                    0.0   \n",
+       "783638          CCRO          ON      NM                    0.0   \n",
+       "994873         JBSSE          ON      NM                    0.0   \n",
+       "1024902         USIM          PNA     N1                    0.0   \n",
+       "1170653    CIELE  FM          ON      NM                    0.0   \n",
        "\n",
-       "        moeda_referencia  preco_abertura  ...  numero_negocios  \\\n",
-       "562463                R$            1.64  ...               10   \n",
-       "43293                 R$           11.63  ...               22   \n",
-       "1147281               R$            0.33  ...               22   \n",
-       "59804                 R$            8.05  ...             6081   \n",
-       "645594                R$            2.03  ...               13   \n",
+       "        moeda_referencia  preco_abertura  preco_maximo  preco_minimo  \\\n",
+       "387349                R$            0.66          0.66          0.54   \n",
+       "783638                R$            0.05          0.05          0.05   \n",
+       "994873                R$            0.30          0.30          0.18   \n",
+       "1024902               R$            0.10          0.16          0.09   \n",
+       "1170653               R$            0.14          0.14          0.13   \n",
        "\n",
-       "         quantidade_papeis_negociados  volume_total_negociado  \\\n",
-       "562463                           6630                11746.40   \n",
-       "43293                            3100                36957.00   \n",
-       "1147281                         24700                 8156.00   \n",
-       "59804                          185976              1526108.41   \n",
-       "645594                          76900               166722.00   \n",
+       "         preco_medio  preco_ultimo_negocio  preco_melhor_oferta_compra  \\\n",
+       "387349          0.55                  0.54                        0.50   \n",
+       "783638          0.05                  0.05                        0.00   \n",
+       "994873          0.20                  0.22                        0.15   \n",
+       "1024902         0.13                  0.15                        0.14   \n",
+       "1170653         0.13                  0.13                        0.10   \n",
        "\n",
-       "         preco_exercicio  indicador_correcao_precos  data_vencimento  \\\n",
-       "562463             18.66                          0       2020-06-15   \n",
-       "43293               0.00                          0              NaT   \n",
-       "1147281            26.54                          0       2020-12-21   \n",
-       "59804               0.00                          0              NaT   \n",
-       "645594             31.00                          0       2020-07-20   \n",
+       "         preco_melhor_oferta_venda  numero_negocios  \\\n",
+       "387349                        1.08               34   \n",
+       "783638                        0.11                1   \n",
+       "994873                        0.29               15   \n",
+       "1024902                       0.15              152   \n",
+       "1170653                       0.15                7   \n",
        "\n",
-       "         fator_cotacao  preco_exercicio_pontos   codigo_isin  \\\n",
-       "562463               1                     0.0  BRBBDCACNPR8   \n",
-       "43293                1                     0.0  BRRNEWCDAM15   \n",
-       "1147281              1                     0.0  BRITUBACNPR1   \n",
-       "59804                1                     0.0  BRIRBRACNOR4   \n",
-       "645594               1                     0.0  BRELETACNPB7   \n",
+       "         quantidade_papeis_negociados volume_total_negociado  preco_exercicio  \\\n",
+       "387349                         184600              102132.00            18.00   \n",
+       "783638                           1000                  50.00            18.00   \n",
+       "994873                          20600                4209.00            17.21   \n",
+       "1024902                        366300               50133.00            13.31   \n",
+       "1170653                          3000                 394.00             3.50   \n",
        "\n",
-       "         num_distribuicao_papel  \n",
-       "562463                      708  \n",
-       "43293                       106  \n",
-       "1147281                     268  \n",
-       "59804                       106  \n",
-       "645594                       71  \n",
+       "         indicador_correcao_precos data_vencimento  fator_cotacao  \\\n",
+       "387349                           0      2020-03-16              1   \n",
+       "783638                           0      2020-08-17              1   \n",
+       "994873                           0      2020-11-16              1   \n",
+       "1024902                          0      2020-11-16              1   \n",
+       "1170653                          0      2021-01-18              1   \n",
        "\n",
-       "[5 rows x 26 columns]"
+       "         preco_exercicio_pontos   codigo_isin  num_distribuicao_papel  \n",
+       "387349                      0.0  BRBRMLACNOR9                     115  \n",
+       "783638                      0.0  BRCCROACNOR2                     137  \n",
+       "994873                      0.0  BRJBSSACNOR8                     115  \n",
+       "1024902                     0.0  BRUSIMACNPA6                     162  \n",
+       "1170653                     0.0  BRCIELACNOR3                     142  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
